# make_singleton

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: Cargo.toml
examples/src/: main.rs
src/: lib.rs
